--- a/interface/i18n/mist.en.i18n.json
+++ b/interface/i18n/mist.en.i18n.json
@@ -152,7 +152,7 @@
             "nodeBinaryNotFound": "No Wanchain node binary found!<br><small> <a href='https://www.ethereum.org/cli#geth' class='button' target='_blank'> Please start one manually before. </a> </small>",
             "nodeStarting": "Wanchain node starting up...",
             "nodeStarted": "Wanchain node started",
-            "nodeConnected": "Wanchain node connected",
+            "nodeConnected": "Wanchain node connected\n\rServer API connecting...",
             "nodeStopping": "Wanchain node stopping...",
             "nodeStopped": "Wanchain node stopped",
             "nodeError": "Wanchain node connection error:'(",
